--- a/assets/styles/scss/components/_header.scss
+++ b/assets/styles/scss/components/_header.scss
@@ -20,6 +20,10 @@
         height: 80px;
     }
 
+    @include break(460px) {
+        height: 96px;
+    }
+
     .images {
         img {
             @include laptop {
