--- a/assets/styles/scss/components/_footer.scss
+++ b/assets/styles/scss/components/_footer.scss
@@ -20,6 +20,15 @@
         justify-content: center;
         column-gap: 45px;
     }
+
+    @include break(620px) {
+        column-gap: 0px;
+    }
+
+    @include break(520px) {
+        margin-top: 75px;
+    }
+
     .chatbot{
         width: 390px;
 
@@ -33,6 +42,10 @@
 
         @include tablet {
             width: 240px;
+        }
+
+        @include break(550px) {
+            width: 175px;
         }
     }
 
@@ -50,6 +63,9 @@
         @include tablet {
             width: 240px;
         }
+        @include break(550px) {
+            width: 162px;
+        }
     }
 
     .figure5{
@@ -65,12 +81,28 @@
             top: -60px;
             left: 56px;
         }
+
+        @include break(520px) {
+            top: -50px;
+        }
+
+        @include break(450px) {
+            left: 30px;
+        }
+
+        @include break(380px) {
+            left: 16px;
+        }
     }
     h4{
         @include container-h(32px);
         margin-bottom: 40px;
         @include tablet {
             margin-bottom: 19px;
+        }
+
+        @include break(550px) {
+            font-size: 12px
         }
     }
     p{
@@ -87,6 +119,11 @@
             @include break(1100px) {
                 margin-top: 17px;
             }
+
+            @include break(550px) {
+                margin-top: 8px;
+            }
+
             div{
                 display: flex;
                 align-items: center;
@@ -99,6 +136,9 @@
                     column-gap: 10px;
                 }
 
+                @include break(550px) {
+                    column-gap: 5px;
+                }
                 img{
                     position: relative;
                     @include laptop {
@@ -106,6 +146,10 @@
                     }
                     @include break(1100px) {
                         width: 16px;
+                    }
+
+                    @include break(420px) {
+                        width: 10px;
                     }
                 }
                 &:hover{
