--- a/assets/styles/scss/_font.scss
+++ b/assets/styles/scss/_font.scss
@@ -1,2 +1,9 @@
-@import url("//cdn.web-fonts.ge/fonts/bpg-nino-mtavruli/css/bpg-nino-mtavruli.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Georgian:wght@400;700&display=swap');
+@font-face {
+    font-family: 'BPG Nino Mtavruli';
+    src: url("../../fonts/bpg-nino-mtavruli-webfont.woff2") format('woff2');
+}
+
+@font-face {
+    font-family: 'Noto Sans Georgian';
+    src: url("../../fonts/NotoSansGeorgian-VariableFont_wdth\,wght.ttf") format('truetype');
+}
