--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -262,6 +262,46 @@ html {
   z-index: -1;
 }
 
+.chatbot__container {
+  bottom: 150px;
+  right: 70px;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  z-index: 9999;
+  width: 370px;
+  height: 410px;
+  display: none;
+}
+.chatbot__container.active {
+  display: block;
+}
+@media screen and (max-width: 1540px) {
+  .chatbot__container {
+    bottom: 100px;
+    right: 60px;
+  }
+}
+@media screen and (max-width: 1100px) {
+  .chatbot__container {
+    width: 300px;
+    bottom: 80px;
+    right: 40px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .chatbot__container {
+    width: 280px;
+    bottom: 50px;
+    right: 0px;
+  }
+}
+.chatbot__container #chatbotIframe {
+  width: 100%;
+  height: 100%;
+}
+
 .message-square {
   cursor: pointer;
   position: fixed;
