--- a/assets/styles/scss/components/_main.scss
+++ b/assets/styles/scss/components/_main.scss
@@ -8,6 +8,44 @@
     width: 100%;
     z-index: -1;
 }
+
+//chatbot
+.chatbot__container {
+    bottom: 150px;
+    right: 70px;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    z-index: 9999;
+    width: 370px;
+    height: 410px;
+    display: none;
+    &.active{
+        display: block;
+    }
+    @include laptop{
+        bottom: 100px;
+        right: 60px
+    }
+    @include break(1100px) {
+        width: 300px;
+        bottom: 80px;
+        right: 40px;
+    }
+
+    @include tablet {
+        width: 280px;
+        bottom: 50px;
+        right: 0px;
+    }
+    #chatbotIframe{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
 .message-square{
     cursor: pointer;
     position: fixed;
